week-4/gitops/paas-ui/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: paas-ui
  namespace: cnpg-system
spec:
  replicas: 2
  selector:
    matchLabels:
      app: paas-ui
  template:
    metadata:
      labels:
        app: paas-ui
    spec:
      imagePullSecrets:
        - name: paas-api-registry-pull
      containers:
        - name: paas-ui
          image: registry.onstackit.cloud/moheddine-paas/paas-ui:fe2e8a5
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: 25m
              memory: 32Mi
            limits:
              cpu: 200m
              memory: 64Mi
