week-4/gitops/paas-ui/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: paas-ui
  namespace: cnpg-system
spec:
  selector:
    app: paas-ui
  ports:
    - port: 80
      targetPort: 8080
