week-4/gitops/paas-ui/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: paas-ui
  namespace: cnpg-system
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: cnpg-system-paas-ui-allowlist@kubernetescrd
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - ui.moheddine.runs.onstackit.cloud
      secretName: wildcard-paas-tls
  rules:
    - host: ui.moheddine.runs.onstackit.cloud
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: paas-ui
                port:
                  number: 80
